--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "joi": "^17.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
